src/github.com/ebay/beam/query/parser/testdata/legacy/errors/bools.res
Query:
?s ?p TRUE

Parsed:
Error: unable to parse query: line 1 column 7: expected a valid query term, but got 'TRUE'
